fix: remove drag and drop to prepare new system

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
     </button>
   </template>
 
-  <!-- module -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha384-GWpeQQCx59oy0AZxNeVcLrX+Nqpg3dhEoBT/ynclm8lAsrgtZfh/GqUAEuOG1gYA" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/Draggable.min.js" integrity="sha384-5LhvfxbQfONrlJsHdhzPxeju3aglYZBXLsd+ObQ9FPEeltlnkL0p4dREmuPjZb30" crossorigin="anonymous"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
