feat(dispatch): handle create category

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Primary Meta Tags -->
-  <title>Faily pannel - Unofficial app</title>
-  <meta name="title" content="FailyV pannel - Unofficial app">
-  <meta name="description" content="FailyV Unofficial pannel app made with web components">
+  <title>Faily panel - Unofficial app</title>
+  <meta name="title" content="FailyV panel - Unofficial app">
+  <meta name="description" content="FailyV Unofficial panel app made with web components">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://john-mirage-failyv-pannel.vercel.app/">
-  <meta property="og:title" content="FailyV pannel - Unofficial app">
-  <meta property="og:description" content="FailyV Unofficial pannel app made with web components">
+  <meta property="og:title" content="FailyV panel - Unofficial app">
+  <meta property="og:description" content="FailyV Unofficial panel app made with web components">
   <meta property="og:image" content="https://john-mirage-failyv-pannel.vercel.app/preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://john-mirage-failyv-pannel.vercel.app/">
-  <meta property="twitter:title" content="FailyV pannel - Unofficial app">
-  <meta property="twitter:description" content="FailyV Unofficial pannel app made with web components">
+  <meta property="twitter:title" content="FailyV panel - Unofficial app">
+  <meta property="twitter:description" content="FailyV Unofficial panel app made with web components">
   <meta property="twitter:image" content="https://john-mirage-failyv-pannel.vercel.app/preview.jpg">
 </head>
 
@@ -137,6 +137,7 @@
       <h2 class="dispatchToolbar__name">Dispatch des unités</h2>
     </div>
     <div class="dispatchToolbar__section">
+      <button data-js="add-category-button">Créer une categorie</button>
       <!--
       <button class="dispatchToolbar__button" is="web-button" data-icon="add" data-label="ajouter une catégorie" data-js="add-category-button"></button>
       -->
